move more components to package; fix styles through imports!

--- a/examples/frontend/src/styles.css
+++ b/examples/frontend/src/styles.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "@blebbit/authr-react-common/style.css";
+@import "@blebbit/authr-react-tanstack/style.css";
 
 @custom-variant dark (&:is(.dark *));
 /* @variant dark (&:is(.dark *)); */
